--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "postinstall": "npm run wd:update",
-    "wd:update": "node node_modules/protractor/bin/webdriver-manager update",
+    "wd:update": "node node_modules/protractor/bin/webdriver-manager update --versions.chrome 2.31",
     "test:cucumber": "node node_modules/protractor/bin/protractor ./cucumber/protractor.config.js",
     "test:mocha": "node node_modules/protractor/bin/protractor ./mocha/protractor.config.js"
   },
@@ -17,6 +17,7 @@
     "cucumber": "2.3.*",
     "mocha": "^3.5.0",
     "protractor": "^5.1.2",
-    "protractor-cucumber-framework": "^4.0.3"
+    "protractor-cucumber-framework": "^4.0.3",
+    "require-it": "0.0.5"
   }
 }
