Added VSCode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,9 @@
         "cucumber/step_definitions/**/*.js"
     ],
     "cucumberautocomplete.syncfeatures": "cucumber/features/*.feature",
-    "cucumberautocomplete.strictGherkinCompletion": true
+    "cucumberautocomplete.strictGherkinCompletion": true,
+    "npm.enableScriptExplorer": true,
+    "files.autoSave": "afterDelay",
+    "files.autoSaveDelay": 1000,
+    "mocha.enabled": true
 }
