--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "postinstall": "npm run wd:update",
-    "wd:update": "node node_modules/protractor/bin/webdriver-manager update --versions.chrome 2.31",
-    "test:cucumber": "node node_modules/protractor/bin/protractor ./cucumber/protractor.config.js",
-    "test:mocha": "node node_modules/protractor/bin/protractor ./mocha/protractor.config.js"
+    "wd:update": "webdriver-manager update --versions.chrome 2.41",
+    "test:cucumber": "protractor ./cucumber/protractor.config.js",
+    "test:mocha": "protractor ./mocha/protractor.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,6 @@
     "mocha": "^3.5.0",
     "protractor": "^5.1.2",
     "protractor-cucumber-framework": "^4.0.3",
-    "require-it": "0.0.5"
+    "require-it": "^1.0.0"
   }
 }
